做了好多个页面先提交

--- a/contact.html
+++ b/contact.html
@@ -75,12 +75,17 @@
                     </div>
                     <div class="c_contact_quote">
                         <div class="c_contact_quote_info">
-                            <p class="f-32">You can also</p>
-                            <p class="f-40">provide a quotation</p>
-                            <p class="f-32">directly online</p>
+                            <p class="f-32 ppins-bold">You can also</p>
+                            <p class="f-40 ppins-bold">provide a <span>quotation</span></p>
+                            <p class="f-32 ppins-bold mb-20">directly online</p>
                             <p class="f-16">Upload drawings,<br> one click quotation, unlock efficient production password</p>
                         </div>
-                        <div class="c_contact_quote_more"></div>
+                        <div class="c_contact_quote_more mt-60">
+                            <a class="btn btn-bc f-14" href="javascript:;">Get a quote now</a>
+                        </div>
+                        <div class="c_contact_quote_img">
+                            <img src="src/images/img-18.png" alt="contact">
+                        </div>
                     </div>
                 </div>
             </div>
