要做这个页面

--- a/technology.html
+++ b/technology.html
@@ -19,14 +19,14 @@
   <%- header %>
 
   <% const breakName = [
-            { text: 'Customer case'},
+            { text: 'Technology'},
         ];
     %>
 
   <main class="main">
     <section class="p_header">
       <div class="c_img c_img_1">
-        <img src="/src/images/img-01.png" alt="Customer case">
+        <img src="/src/images/img-01.png" alt="Technology">
       </div>
       <div class="r_ring">
         <div class="r r1"></div>
@@ -59,7 +59,7 @@
           </ul>
         </div>
         <div class="c_h1 pt-80 pb-60 xl:pt-100">
-          <h1 class="f-40 lg:f-48 xl:f-56">Customer case</h1>
+          <h1 class="f-40 lg:f-48 xl:f-56">Technology</h1>
         </div>
         <div class="c_sort c_sort_swiper swiper">
           <ul class="flex swiper-wrapper">
@@ -85,13 +85,13 @@
           <% caseList.forEach(item => { %>
           <a href="javascript:;" class="c_item radius-8 relative o-hidden">
             <div class="c_img radius-8 relative o-hidden">
-              <img src="<%= item.img %>" alt="Customer case">
+              <img src="<%= item.img %>" alt="Technology">
             </div>
             <div class="c_info radius-8 pl-30 pr-30 pt-30 pb-30 relative">
               <p class="t f-24">Case name</p>
               <p class="s f-16">Case Summary Occupancy Case Summary</p>
               <div class="i mt-30 op-0">
-                <img src="src/images/img-02.png" alt="Customer case">
+                <img src="src/images/img-02.png" alt="Technology">
               </div>
             </div>
           </a>
@@ -141,7 +141,7 @@
           <% galleryList.forEach(item => { %>
           <a href="javascript:;" class="c_item">
             <div class="c_img radius-10 relative o-hidden">
-              <img src="<%= item.img %>" alt="Customer case">
+              <img src="<%= item.img %>" alt="Technology">
             </div>
           </a>
           <% }) %>
