这两天做了16个页面，剩下个人中心和首页

--- a/case.html
+++ b/case.html
@@ -59,7 +59,7 @@
           </ul>
         </div>
         <div class="c_h1 pt-80 pb-60 xl:pt-100">
-          <h1 class="f-40 lg:f-48 xl:f-56">Customer case</h1>
+          <h1 class="f-40 lg:f-48">Customer case</h1>
         </div>
         <div class="c_sort c_sort_swiper swiper">
           <ul class="flex swiper-wrapper">
@@ -71,7 +71,7 @@
         </div>
       </div>
     </section>
-    <section class="p_case_1 pt-80 pb-100 ml:pb-120">
+    <section class="p_case_1 pt-80 pb-100 md:pb-120">
       <div class="container flex f-col g-60">
         <% const caseList = [
                     { img: 'src/images/img-03.jpg' },
@@ -118,7 +118,7 @@
         </div>
       </div>
     </section>
-    <section class="p_gallery_1 pt-100 pb-100 ml:pt-120 ml:pb-120">
+    <section class="p_gallery p_gallery_1 pt-100 pb-100 md:pt-120 md:pb-120">
       <div class="container">
         <div class="c_h1">
           <h1 class="f-28 md:f-32 lg:f-48 xl:f-56">Project case gallery</h1>
@@ -137,7 +137,7 @@
                     { img: 'src/images/img-16.jpg' },
                     { img: 'src/images/img-17.jpg' },
                 ]; %>
-        <div class="c_list mt-40 g-20 ml:g-30 ml:mt-60">
+        <div class="c_list mt-40 g-20 md:g-30 md:mt-60">
           <% galleryList.forEach(item => { %>
           <a href="javascript:;" class="c_item">
             <div class="c_img radius-10 relative o-hidden">
