--- a/news.html
+++ b/news.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         </section>
-        <section class="p_news_1 pb-100 ml:pb-120">
+        <section class="p_news_1 pb-100 md:pb-120">
             <div class="container flex f-col">
                 <div class="p_news_left flex f-col g-60">
                     <% const caseList = [
