服了服了，个人中心页面麻烦四了

--- a/quote.html
+++ b/quote.html
@@ -27,7 +27,7 @@
                         <a href="javascript:;" class="btn btn-bc">Personal center</a>
                     </div>
                     <form action="">
-                        <div class="form_input mt-60 upload_attachments_module">
+                        <div class="form_input upload_attachments_module">
                             <div class="e_input form-group">
                                 <div class="p_group">
                                     <div class="input-group flex j-center">
