做完所有的个人中心页面，先上传

--- a/quote_success.html
+++ b/quote_success.html
@@ -381,16 +381,16 @@
                                     <p>GB/T 1804-m</p>
                                 </label>
                             </div>
-                            <div class="radiobox_Item other">
+                            <div class="radiobox_Item other flex">
                                 <input class="input-radio" type="radio">
                                 <label class="radiobox">
                                     <i class="radio"></i>
-                                    <p>Other</p>
+                                    <p>other</p>
                                 </label>
-                            </div>
-                            <div class="p_group radiobox_other_input">
-                                <div class="input-group">
-                                    <input type="text" class="p_input" name="text" data-name="e_input-3" autocomplete="off">
+                                <div class="p_group radiobox_other_input">
+                                    <div class="input-group">
+                                        <input type="text" class="p_input" name="text" data-name="e_input-3" autocomplete="off">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -428,16 +428,16 @@
                                     <p>Ra 0.4</p>
                                 </label>
                             </div>
-                            <div class="radiobox_Item other">
+                            <div class="radiobox_Item other flex">
                                 <input class="input-radio" type="radio">
                                 <label class="radiobox">
                                     <i class="radio"></i>
-                                    <p>Other</p>
+                                    <p>other</p>
                                 </label>
-                            </div>
-                            <div class="p_group radiobox_other_input">
-                                <div class="input-group">
-                                    <input type="text" class="p_input" name="text" data-name="e_input-3" autocomplete="off">
+                                <div class="p_group radiobox_other_input">
+                                    <div class="input-group">
+                                        <input type="text" class="p_input" name="text" data-name="e_input-3" autocomplete="off">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -482,16 +482,16 @@
                                     <p>±0.10</p>
                                 </label>
                             </div>
-                            <div class="radiobox_Item other">
+                            <div class="radiobox_Item other flex">
                                 <input class="input-radio" type="radio">
                                 <label class="radiobox">
                                     <i class="radio"></i>
                                     <p>other</p>
                                 </label>
-                            </div>
-                            <div class="p_group radiobox_other_input">
-                                <div class="input-group">
-                                    <input type="text" class="p_input" name="text" data-name="e_input-3" autocomplete="off">
+                                <div class="p_group radiobox_other_input">
+                                    <div class="input-group">
+                                        <input type="text" class="p_input" name="text" data-name="e_input-3" autocomplete="off">
+                                    </div>
                                 </div>
                             </div>
                         </div>
